# ai-annotation-platform

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEV.md  README.md  ROADMAP.md  codecov.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/_shared/mask_utils/: README.md  pyproject.toml
apps/_shared/mask_utils/tests/: test_multi_polygon.py  test_polygon.py
apps/api/: alembic.ini  openapi.snapshot.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_p0_restructuring.py  0003_datasets.py  0004_project_members.py  0005_governance.py  0006_groups.py  0007_invitation_revoked_at.py  0008_dataset_item_dimensions.py  0009_dataset_item_thumbnails.py  0010_task_thumbnails.py  0011_geometry_type_field.py  0012_attributes_schema_and_classes_config.py  0013_annotation_comments.py  0014_project_iou_dedup_threshold.py  0015_audit_detail_gin_index.py  0016_add_version_columns.py  0017_bug_reports.py  0018_password_reset_tokens.py  0019_task_batches.py  0020_comment_polish.py  0021_unify_display_id.py  0022_task_lock_fields.py  0023_audit_request_id.py  0024_backfill_orphan_batch_id.py  0025_bug_reopen_fields.py  0026_notifications.py  0027_batch_review_fields.py  0028_project_in_progress_stored.py  0029_notification_preferences.py  0030_batch_single_assignee.py  0031_annotation_keyset_index.py  0032_audit_log_immutability.py  0033_user_last_login.py  0034_system_settings.py  0035_user_password_admin_reset.py  0036_user_deactivation_request.py  0037_audit_logs_partition.py  0038_task_assigned_at.py  0038_user_last_seen_at.py  0039_task_assigned_at.py  (+29 more)
apps/api/app/: config.py  deps.py  main.py
apps/api/app/api/: health.py
apps/api/app/cli/: __init__.py
apps/api/app/core/: logging.py  password.py  security.py  token_blacklist.py
apps/api/app/db/: base.py  enums.py
apps/api/app/middleware/: audit.py  request_id.py  security_headers.py
apps/api/app/observability/: metrics.py
apps/api/app/schemas/: _jsonb_types.py  annotation.py  annotation_comment.py  annotation_history.py  api_key.py  audit.py  batch.py  bug_report.py  dashboard.py  dataset.py  group.py  invitation.py  me.py  ml_backend.py  notification.py  organization.py  prediction.py  project.py  storage.py  task.py  task_event.py  user.py  video_chapter.py  video_frame_service.py  video_tracker_job.py
apps/api/app/services/: annotation.py  api_key_service.py  audit.py  audit_partition_service.py  batch.py  bug_report.py  captcha_service.py  dataset.py  deactivation_service.py  display_id.py  email.py  export.py  invitation.py  login_failed_counter.py  ml_backend.py  ml_client.py  notification.py  password_reset.py  prediction.py  progress.py  scheduler.py  storage.py  system_settings_service.py  task_lock.py  user_brief.py  video_frame_service.py  video_segment_service.py  video_tracker_adapters.py  video_tracker_job_service.py  video_tracker_runner.py  video_tracks.py
apps/api/app/workers/: audit.py  audit_partition.py  celery_app.py  cleanup.py  deactivation.py  media.py  ml_health.py  presence.py  (+4 more)
apps/api/scripts/: bootstrap_admin.py  dump-openapi.py  entrypoint.sh  import_images.py  reset_datasets.py  seed.py
apps/api/tests/: conftest.py  factory.py  test_admin_alias_freq.py  test_admin_ml_integrations.py  test_admin_ml_integrations_global.py  test_admin_password_reset.py  test_admin_preannotate.py  test_admin_preannotate_jobs.py  test_alembic_drift.py  test_annotation_comments_paged.py  test_api_keys.py  test_attribute_audit.py  test_audit_immutability.py  test_audit_logs.py  test_audit_partition.py  test_auth_refresh.py  test_batch_lifecycle.py  test_batch_pre_annotated.py  test_bug_reports.py  test_captcha_service.py  test_comment_polish.py  test_dashboard_registration_stats.py  test_dashboard_reviewer_mini.py  test_dataset_link.py  test_display_id.py  test_failed_predictions.py  test_health.py  test_interactive_threshold_inject.py  test_jsonb_strong_types.py  test_login_progressive_captcha.py  test_metrics_celery.py  test_ml_backend_limit_and_setup.py  test_ml_backend_schemas.py  test_ml_client_metrics.py  test_ml_health_worker.py  test_notifications.py  test_open_registration.py  test_openapi_contract.py  test_preannotate_text.py  test_prediction_cost_stats.py  (+26 more)
apps/grounded-sam2-backend/: .dockerignore  .gitattributes  Dockerfile  README.md  embedding_cache.py  main.py  observability.py  predictor.py  pyproject.toml  schemas.py
apps/grounded-sam2-backend/scripts/: download_checkpoints.py  sync_vendor.sh
apps/grounded-sam2-backend/tests/: test_embedding_cache.py  test_multi_polygon_output.py  test_predict_text_output_modes.py  test_simplify_tolerance_injection.py
apps/sam3-backend/: .dockerignore  Dockerfile  README.md  embedding_cache.py  main.py  observability.py  predictor.py  pyproject.toml  schemas.py
apps/sam3-backend/scripts/: download_checkpoints.py  smoke_predict.sh  sync_vendor.sh
apps/sam3-backend/tests/: test_embedding_cache.py  test_idle_unload.py  test_predictor_exemplar.py  test_schemas_exemplar.py
(+858 files in other folders)
