[project]
name = "grounded-sam2-backend"
version = "0.9.0"
description = "Grounded-SAM-2 ML Backend (GroundingDINO + SAM 2.1) for ai-annotation-platform"
requires-python = ">=3.10,<3.11"

# torch / torchvision 由 docker base image (pytorch/pytorch:2.3.1-cuda12.1-cudnn8-devel) 锁定,
# 不在此处重复声明以避免 pip 误升级覆盖预装版本.
# 与官仓 IDEA-Research/Grounded-SAM-2/Dockerfile 对齐: CUDA 12.1, Python 3.10, torch 2.3.1, torchvision 0.18.1.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "numpy>=1.24,<2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "shapely>=2.0",
    # huggingface_hub<1.0: 1.x 移除了 grounded-sam-2 vendor 依赖的旧 API.
    # transformers<5: 5.x backends 检测改写, 与 vendor 内 GroundingDINO + torch 2.3.1 不兼容.
    "huggingface_hub>=0.23,<1.0",
    "transformers>=4.40,<5",
    "supervision>=0.21",
    "addict>=2.4",
    "pycocotools>=2.0",
    "timm>=0.9",
    "yapf",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "predictor", "schemas"]
