[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anno-mask-utils"
version = "0.1.0"
description = "共享 mask -> polygon 工具，被 grounded-sam2-backend / sam3-backend 复用"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "shapely>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
